{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 20,
  "lineage": "267fc879-58ee-f125-7820-856d49a100d7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "k8sVNetnic-1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkInterfaces/k8sVNetnic-1",
            "ip_configuration": [
              {
                "name": "k8sVNetnic-1NicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/publicIPAddresses/VMPublicIP-1",
                "subnet_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/virtualNetworks/k8sVNet/subnets/k8sSubnet-1"
              }
            ],
            "location": "eastus",
            "name": "k8sVNetnic-1",
            "network_security_group_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkSecurityGroups/k8sVNetnsg-1",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "rgk8s",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.k8sVNetnsg-1",
            "azurerm_public_ip.VMPublicIP-1",
            "azurerm_resource_group.rgk8s",
            "azurerm_subnet.k8sSubnet-1",
            "azurerm_virtual_network.k8sVNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "k8sVNetnic-2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkInterfaces/k8sVNetnic-2",
            "ip_configuration": [
              {
                "name": "k8sVNetnic-2NicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/publicIPAddresses/VMPublicIP-2",
                "subnet_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/virtualNetworks/k8sVNet/subnets/k8sSubnet-1"
              }
            ],
            "location": "eastus",
            "name": "k8sVNetnic-2",
            "network_security_group_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkSecurityGroups/k8sVNetnsg-2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rgk8s",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.k8sVNetnsg-2",
            "azurerm_public_ip.VMPublicIP-2",
            "azurerm_resource_group.rgk8s",
            "azurerm_subnet.k8sSubnet-1",
            "azurerm_virtual_network.k8sVNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "k8sVNetnic-3",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkInterfaces/k8sVNetnic-3",
            "ip_configuration": [
              {
                "name": "k8sVNetnic-3NicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/publicIPAddresses/VMPublicIP-3",
                "subnet_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/virtualNetworks/k8sVNet/subnets/k8sSubnet-1"
              }
            ],
            "location": "eastus",
            "name": "k8sVNetnic-3",
            "network_security_group_id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkSecurityGroups/k8sVNetnsg-3",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rgk8s",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.k8sVNetnsg-3",
            "azurerm_public_ip.VMPublicIP-3",
            "azurerm_resource_group.rgk8s",
            "azurerm_subnet.k8sSubnet-1",
            "azurerm_virtual_network.k8sVNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "k8sVNetnsg-1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkSecurityGroups/k8sVNetnsg-1",
            "location": "eastus",
            "name": "k8sVNetnsg-1",
            "resource_group_name": "rgk8s",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgk8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "k8sVNetnsg-2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkSecurityGroups/k8sVNetnsg-2",
            "location": "eastus",
            "name": "k8sVNetnsg-2",
            "resource_group_name": "rgk8s",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgk8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "k8sVNetnsg-3",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/networkSecurityGroups/k8sVNetnsg-3",
            "location": "eastus",
            "name": "k8sVNetnsg-3",
            "resource_group_name": "rgk8s",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgk8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "VMPublicIP-1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/publicIPAddresses/VMPublicIP-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.68.168.207",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VMPublicIP-1",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "rgk8s",
            "sku": "Basic",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgk8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "VMPublicIP-2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/publicIPAddresses/VMPublicIP-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.121.50.93",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VMPublicIP-2",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "rgk8s",
            "sku": "Basic",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgk8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "VMPublicIP-3",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/publicIPAddresses/VMPublicIP-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.68.170.2",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VMPublicIP-3",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "rgk8s",
            "sku": "Basic",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgk8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "k8sSubnet-1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/virtualNetworks/k8sVNet/subnets/k8sSubnet-1",
            "name": "k8sSubnet-1",
            "resource_group_name": "rgk8s",
            "virtual_network_name": "k8sVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rgk8s",
            "azurerm_virtual_network.k8sVNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "k8sVNet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/c9f38984-7bb2-408d-bdea-6a925db996fb/resourceGroups/rgk8s/providers/Microsoft.Network/virtualNetworks/k8sVNet",
            "location": "eastus",
            "name": "k8sVNet",
            "resource_group_name": "rgk8s",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgk8s"
          ]
        }
      ]
    }
  ]
}